--- a/pasteleria.html
+++ b/pasteleria.html
@@ -65,7 +65,7 @@
   </svg>
 </div>
 
-<h1 class="Principal">Principal</h1>
+<h1 class="Principal m-4">Principal</h1>
 
 <div class="cards">
   <div class="card m-4" style="width: 18rem;" data-precio="50000">
@@ -131,7 +131,165 @@
       <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
     </div>
   </div>
+
+  <div class="card m-4" style="width: 18rem;" data-precio="5500" data-categoria="Postres Individuales">
+    <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+    <div class="card-body">
+      <h5 class="card-title">Tiramisú Clásico</h5>
+      <p class="card-text"> Un postre italiano individual con capas de café, mascarpone y cacao, 
+        <br>perfecto para finalizar cualquier comida. 
+        <BR></BR>
+        <p class="precio fw-bold">Precio: $5.500 CLP </p>  
+      <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+    </div>
+  </div>
+
+
+  <div class="card m-4" style="width: 18rem;" data-precio="48000" data-categoria="Productos Sin Azúcar">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Torta Sin Azúcar de Naranja</h5>
+        <p class="card-text"> Torta ligera y deliciosa, endulzada naturalmente, ideal para 
+          <br>quienes buscan opciones más saludables. 
+          <BR></BR>
+          <p class="precio fw-bold">Precio: $48.000 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+  <div class="card m-4" style="width: 18rem;" data-precio="47000" data-categoria="Productos Sin Azúcar">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Cheesecake Sin Azúcar</h5>
+        <p class="card-text"> Suave y cremoso, este cheesecake es una opción perfecta para 
+          <br>disfrutar sin culpa.  
+          <BR></BR>
+          <br>
+          <p class="precio fw-bold">Precio: $47.000 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+  <div class="card m-4" style="width: 18rem;" data-precio="3000" data-categoria="Pastelería Tradicional">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Empanada de Manzana</h5>
+        <p class="card-text"> Pastelería tradicional rellena de manzanas especiadas, perfecta 
+          <br>para un dulce desayuno o merienda.  
+          <BR></BR>
+          <br>
+          <p class="precio fw-bold">Precio: $3.000 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+  <div class="card m-4" style="width: 18rem;" data-precio="6000" data-categoria="Pastelería Tradicional">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Tarta de Santiago</h5>
+        <p class="card-text"> Tradicional tarta española hecha con almendras, azúcar, y huevos, una 
+          <br>delicia para los amantes de los postres clásicos.  
+          <BR></BR>
+          <p class="precio fw-bold">Precio: $6.000 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+
+  <div class="card m-4" style="width: 18rem;" data-precio="4000" data-categoria="Productos Sin Gluten">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Brownie Sin Gluten</h5>
+        <p class="card-text"> Rico y denso, este brownie es perfecto para quienes necesitan evitar 
+          <br>el gluten sin sacrificar el sabor.   
+          <BR></BR>
+          <p class="precio fw-bold">Precio: $4.000 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+  <div class="card m-4" style="width: 18rem;" data-precio="3500" data-categoria="Productos Sin Gluten">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Pan Sin Gluten</h5>
+        <p class="card-text"> Suave y esponjoso, ideal para sándwiches o para acompañar cualquier 
+          <br>comida.   
+          <BR></BR>
+          <p class="precio fw-bold">Precio: $3.500 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+  <div class="card m-4" style="width: 18rem;" data-precio="50000" data-categoria="Productos Sin Gluten">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Torta Vegana de Chocolate</h5>
+        <p class="card-text"> Torta de chocolate húmeda y deliciosa, hecha sin productos de 
+          <br>origen animal, perfecta para veganos.    
+          <BR></BR>
+          <p class="precio fw-bold">Precio: $50.000 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+  <div class="card m-4" style="width: 18rem;" data-precio="4500" data-categoria="Productos Sin Gluten">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Galletas Veganas de Avena</h5>
+        <p class="card-text"> Crujientes y sabrosas, estas galletas son una excelente opción 
+          <br>para un snack saludable y vegano.    
+          <BR></BR>
+          <br>
+          <p class="precio fw-bold">Precio: $4.500 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+
+  <div class="card m-4" style="width: 18rem;" data-precio="55000" data-categoria="Productos Sin Gluten">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Torta Especial de Cumpleaños</h5>
+        <p class="card-text"> Diseñada especialmente para celebraciones, personalizable 
+          <br>con decoraciones y mensajes únicos. 
+          <br>
+          <br>
+          <p class="precio fw-bold">Precio: $55.000 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+
+  <div class="card m-4" style="width: 18rem;" data-precio="60000" data-categoria="Productos Sin Gluten">
+      <img src="https://i.pinimg.com/736x/22/b7/30/22b7305c7a1aa7f2778ba86f206df70e.jpg" class="card-img-top" alt="torta" height="340px">
+      <div class="card-body">
+        <h5 class="card-title">Torta Especial de Boda</h5>
+        <p class="card-text"> Elegante y deliciosa, esta torta está diseñada para ser el centro de 
+          <br>atención en cualquier boda.  
+          <br>
+          <BR></BR>
+          <p class="precio fw-bold">Precio: $60.000 CLP </p>  
+        <a href="#" class="btn btn-primary agregar-carrito" style="background-color: #5d4037; border-color: #5d4037;">Agregar al carrito</a>
+      </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
+
+
+
 
 <div class="card mb-3" style="max-width: 75%;">
   <div class="row-g-0">
