--- a/registro.html
+++ b/registro.html
@@ -29,15 +29,16 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Productos
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Tortas Cuadradas</a></li>
-            <li><a class="dropdown-item" href="#">Tortas Circulares</a></li>
-            <li><a class="dropdown-item" href="#">Postres Individuales</a></li>
-            <li><a class="dropdown-item" href="#">Productos Sin Azúcar</a></li>
-            <li><a class="dropdown-item" href="#">Pastelería Tradicional</a></li>
-            <li><a class="dropdown-item" href="#">Productos sin gluten</a></li>
-            <li><a class="dropdown-item" href="#">Productos Vegana</a></li>
-            <li><a class="dropdown-item" href="#">Tortas Especiales</a></li>
+          <ul class="dropdown-menu" id="menuCategorias">
+            <li><a class="dropdown-item categoria-item" data-cat="all" href="#">Todas</a></li>
+            <li><a class="dropdown-item" href="pasteleria.html">Tortas Cuadradas</a></li>
+            <li><a class="dropdown-item" href="pasteleria.html">Tortas Circulares</a></li>
+            <li><a class="dropdown-item" href="pasteleria.html">Postres Individuales</a></li>
+            <li><a class="dropdown-item" href="pasteleria.html">Productos Sin Azúcar</a></li>
+            <li><a class="dropdown-item" href="pasteleria.html">Pastelería Tradicional</a></li>
+            <li><a class="dropdown-item" href="pasteleria.html">Productos sin gluten</a></li>
+            <li><a class="dropdown-item" href="pasteleria.html">Productos Vegana</a></li>
+            <li><a class="dropdown-item" href="pasteleria.html">Tortas Especiales</a></li>
           </ul>
         </li>
         <li class="nav-item">
